[gd_scene load_steps=10 format=3 uid="uid://cwdpaylhn3qph"]

[ext_resource type="Script" path="res://Scripts/GameScripts/Ranking.gd" id="1_5ubx4"]
[ext_resource type="Texture2D" uid="uid://x8gwfmixkflv" path="res://assets/img/background.png" id="2_c4cju"]
[ext_resource type="Texture2D" uid="uid://bctdrtqf8m318" path="res://assets/img/ranking.png" id="3_aa7n0"]
[ext_resource type="Texture2D" uid="uid://12vhwbc85r20" path="res://assets/img/player1_right.png" id="4_u0o7p"]
[ext_resource type="FontFile" path="res://assets/DynamicNotoSans.tres" id="5_vty4a"]
[ext_resource type="Texture2D" uid="uid://5ps43o4pt68j" path="res://assets/img/back_button.png" id="6_hj3vc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ghxuv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0gv3w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48il5"]

[node name="Ranking" type="Node"]
script = ExtResource("1_5ubx4")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.341176, 0.341176, 0.341176, 1)
position = Vector2(983, 533)
scale = Vector2(1, 1.12524)
texture = ExtResource("2_c4cju")

[node name="Ranking" type="Sprite2D" parent="."]
position = Vector2(960, 480)
scale = Vector2(0.36, 0.36)
texture = ExtResource("3_aa7n0")

[node name="Rank1" type="Control" parent="Ranking"]
layout_mode = 3
anchors_preset = 0
offset_left = -600.0
offset_top = -820.0
offset_right = 900.0
offset_bottom = -420.0

[node name="Player" type="Sprite2D" parent="Ranking/Rank1"]
position = Vector2(180, 200)
scale = Vector2(2.3, 2.3)
texture = ExtResource("4_u0o7p")

[node name="Name" type="Label" parent="Ranking/Rank1"]
layout_mode = 0
offset_left = 350.0
offset_top = 60.0
offset_right = 1444.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "PLAYERNAMEWITHTWENTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="Ranking/Rank1"]
layout_mode = 0
offset_left = 430.0
offset_top = 200.0
offset_right = 830.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "00:00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Ranking/Rank1"]
layout_mode = 0
offset_left = 900.0
offset_top = 200.0
offset_right = 1303.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "10597"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rank2" type="Control" parent="Ranking"]
layout_mode = 3
anchors_preset = 0
offset_left = -600.0
offset_top = -400.0
offset_right = 900.0

[node name="Player" type="Sprite2D" parent="Ranking/Rank2"]
position = Vector2(180, 200)
scale = Vector2(2.2, 2.2)
texture = ExtResource("4_u0o7p")

[node name="Name" type="Label" parent="Ranking/Rank2"]
layout_mode = 0
offset_left = 350.0
offset_top = 60.0
offset_right = 1444.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "PLAYERNAMEWITHTWENTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="Ranking/Rank2"]
layout_mode = 0
offset_left = 430.0
offset_top = 200.0
offset_right = 830.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "00:00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Ranking/Rank2"]
layout_mode = 0
offset_left = 900.0
offset_top = 200.0
offset_right = 1303.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "10597"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rank3" type="Control" parent="Ranking"]
layout_mode = 3
anchors_preset = 0
offset_left = -600.0
offset_top = -30.0
offset_right = 900.0
offset_bottom = 370.0

[node name="Player" type="Sprite2D" parent="Ranking/Rank3"]
position = Vector2(180, 200)
scale = Vector2(2, 2)
texture = ExtResource("4_u0o7p")

[node name="Name" type="Label" parent="Ranking/Rank3"]
layout_mode = 0
offset_left = 350.0
offset_top = 60.0
offset_right = 1444.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "PLAYERNAMEWITHTWENTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="Ranking/Rank3"]
layout_mode = 0
offset_left = 430.0
offset_top = 200.0
offset_right = 830.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "00:00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Ranking/Rank3"]
layout_mode = 0
offset_left = 900.0
offset_top = 200.0
offset_right = 1303.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "10597"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rank4" type="Control" parent="Ranking"]
layout_mode = 3
anchors_preset = 0
offset_left = -600.0
offset_top = 340.0
offset_right = 900.0
offset_bottom = 740.0

[node name="Player" type="Sprite2D" parent="Ranking/Rank4"]
position = Vector2(180, 200)
scale = Vector2(2, 2)
texture = ExtResource("4_u0o7p")

[node name="Name" type="Label" parent="Ranking/Rank4"]
layout_mode = 0
offset_left = 350.0
offset_top = 60.0
offset_right = 1444.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "PLAYERNAMEWITHTWENTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="Ranking/Rank4"]
layout_mode = 0
offset_left = 430.0
offset_top = 200.0
offset_right = 830.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "00:00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Ranking/Rank4"]
layout_mode = 0
offset_left = 900.0
offset_top = 200.0
offset_right = 1303.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "10597"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rank5" type="Control" parent="Ranking"]
layout_mode = 3
anchors_preset = 0
offset_left = -600.0
offset_top = 710.0
offset_right = 900.0
offset_bottom = 1110.0

[node name="Player" type="Sprite2D" parent="Ranking/Rank5"]
position = Vector2(180, 200)
scale = Vector2(2, 2)
texture = ExtResource("4_u0o7p")

[node name="Name" type="Label" parent="Ranking/Rank5"]
layout_mode = 0
offset_left = 350.0
offset_top = 60.0
offset_right = 1444.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "PLAYERNAMEWITHTWENTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="Ranking/Rank5"]
layout_mode = 0
offset_left = 430.0
offset_top = 200.0
offset_right = 830.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "00:00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Ranking/Rank5"]
layout_mode = 0
offset_left = 900.0
offset_top = 200.0
offset_right = 1303.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "10597"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackBtn" type="Button" parent="."]
texture_repeat = 2
offset_left = 690.0
offset_top = 900.0
offset_right = 1034.0
offset_bottom = 1096.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("5_vty4a")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ghxuv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0gv3w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_48il5")
icon = ExtResource("6_hj3vc")
icon_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_up" from="BackBtn" to="." method="_on_back_btn_button_up"]
[connection signal="mouse_entered" from="BackBtn" to="." method="_on_back_btn_mouse_entered"]
[connection signal="mouse_exited" from="BackBtn" to="." method="_on_back_btn_mouse_exited"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
